:sparkles: split `main.rs` to examples

--- a/examples/websocket/index.html
+++ b/examples/websocket/index.html
@@ -12,7 +12,7 @@
       <div id="log" disabled></div>
     </div>
     <script>
-      let ws = new WebSocket(`ws://${window.location.host}`);
+      let ws = new WebSocket(`ws://${window.location.host}/ws`);
 
       function log(...data) {
         document.getElementById("log").innerHTML += `<div>${data.join(" ")}</div>`;
